@@ -129,6 +129,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   better localization.  Change is reverse-compatible and can be ignored for
   most wikis.
 * Adding a 'reason' field to Special:Userrights
+* Added 'MonoBookTemplateAboveColumnContent' hook; see docs/hooks.txt for more information
 
 == Bugfixes since 1.9 ==
 
